WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173027
Pseudo-elements (::after) in shadow roots don't animate
https://bugs.webkit.org/show_bug.cgi?id=173027
Summary
Pseudo-elements (::after) in shadow roots don't animate
Keanu Lee
Reported
2017-06-06 12:14:45 PDT
E.g. Inside a shadow root: <style> div::after { display: inline-block; content: 'boo'; animation: spin 1s infinite; } </style> Repo:
http://output.jsbin.com/kuwado
Expected: The text should have a rotate animation. Actual: It does not.
Attachments
Test
(509 bytes, text/html)
2020-05-27 06:33 PDT
,
Antoine Quint
no flags
Details
patch
(3.98 KB, patch)
2020-06-08 05:57 PDT
,
Antti Koivisto
graouts
: review+
Details
Formatted Diff
Diff
patch
(3.98 KB, patch)
2020-06-08 06:41 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Laurent Pellegrino
Comment 1
2018-01-24 12:27:01 PST
The issue is still present in Safari 11.0.2. Any updates?
Radar WebKit Bug Importer
Comment 2
2018-08-01 22:41:01 PDT
<
rdar://problem/42842994
>
Antoine Quint
Comment 3
2018-08-14 08:04:21 PDT
I tried and this test fails with the new animation code path as well as the old one. The test works fine in Chrome Canary and Firefox Nightly.
Antoine Quint
Comment 4
2020-05-27 06:22:30 PDT
We fail to start the animation under AnimationTimeline::updateCSSAnimationsForElement() because shouldConsiderAnimation() returns false in this statement: if (auto* styleScope = Style::Scope::forOrdinal(element, animation.nameStyleScopeOrdinal())) return styleScope->resolver().isAnimationNameValid(name); Indeed, m_keyframesRuleMap is empty and so we cannot validate the animation name.
Antoine Quint
Comment 5
2020-05-27 06:24:33 PDT
Style::Resolver::addKeyframeStyle() is called but not on the same style resolver used in shouldConsiderAnimation().
Antoine Quint
Comment 6
2020-05-27 06:33:28 PDT
Created
attachment 400329
[details]
Test
Antti Koivisto
Comment 7
2020-06-08 05:57:06 PDT
Created
attachment 401327
[details]
patch
Antoine Quint
Comment 8
2020-06-08 06:02:14 PDT
Comment on
attachment 401327
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401327&action=review
> Source/WebCore/ChangeLog:15 > + The keyfram code that computes the style already does this correctly.
Typo: keyfram.
Antti Koivisto
Comment 9
2020-06-08 06:41:53 PDT
Created
attachment 401329
[details]
patch
EWS
Comment 10
2020-06-08 07:24:19 PDT
Committed
r262711
: <
https://trac.webkit.org/changeset/262711
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401329
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug