Pseudo-elements (::after) in shadow roots don't animate https://bugs.webkit.org/show_bug.cgi?id=173027 <rdar://problem/42842994>

Reviewed by Antoine Quint.

Source/WebCore:

Test: animations/keyframe-pseudo-shadow.html

* animation/AnimationTimeline.cpp:
(WebCore::shouldConsiderAnimation):

We should use the actual element instead of the PseudoElement when calling Style::Scope::forOrdinal.
The keyframe code that computes the style already does this correctly.

LayoutTests:

* animations/keyframe-pseudo-shadow-expected.html: Added.
* animations/keyframe-pseudo-shadow.html: Added.


Canonical link: https://commits.webkit.org/225708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262711 268f45cc-cd09-0410-ab3c-d52691b4dbfc